@@ -53,6 +53,7 @@ libinkpre_a_SOURCES =	\
 	desktop.cpp desktop.h	\
 	document-undo.cpp	\
 	document.cpp document.h document-private.h	\
+	document-subset.cpp document-subset.h	\
         doxygen-main.cpp \
 	draw-anchor.cpp	\
 	draw-anchor.h	\
